Got Heartbeat blinking

--- a/EIE/eie_sam3u2_vsc-gcc-port/.vscode/tasks.json
+++ b/EIE/eie_sam3u2_vsc-gcc-port/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build firmware",
             "type": "process",
-            "command": "python",
+            "command": "py",
             "args": [
                 "waf",
                 "build",
