--- a/EIE/eie_sam3u2_vsc-gcc-port/.vscode/launch.json
+++ b/EIE/eie_sam3u2_vsc-gcc-port/.vscode/launch.json
@@ -1,68 +1,80 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "cwd": "${workspaceFolder}",
+      "executable": "./build/firmware-ascii",
+      "name": "Debug ASCII Board",
+      "request": "launch",
+      "type": "cortex-debug",
+      "device": "ATSAM3U2C",
+      "runToEntryPoint": "main",
+      "showDevDebugOutput": "none",
+      "servertype": "jlink",
+      "svdPath": "${workspaceFolder}/firmware_common/bsp/ATSAM3U2C.svd",
+      "preLaunchTask": "Build firmware"
+    },
+    {
+      "cwd": "${workspaceFolder}",
+      "executable": "./build/firmware-dot-matrix",
+      "name": "Debug Dot Matrix Board",
+      "request": "launch",
+      "type": "cortex-debug",
+      "device": "ATSAM3U2C",
+      "runToEntryPoint": "main",
+      "showDevDebugOutput": "none",
+      "servertype": "jlink",
+      "svdPath": "${workspaceFolder}/firmware_common/bsp/ATSAM3U2C.svd",
+      "preLaunchTask": "Build firmware"
+    },
+    {
+      "name": "waf",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/waf",
+      "args": [
+        "${input:waf-command}"
+      ],
+      "env": {
+        "PYDEVD_DISABLE_FILE_VALIDATION": "1"
+      },
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "justMyCode": false
+    },
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": true,
+      "cwd": "c:/Users/CFS/OneDrive/Documents/projects/Plan-T/EIE/eie_sam3u2_vsc-gcc-port/firmware_common/application",
+      "program": "c:/Users/CFS/OneDrive/Documents/projects/Plan-T/EIE/eie_sam3u2_vsc-gcc-port/firmware_common/application/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
         {
-            "cwd": "${workspaceFolder}",
-            "executable": "./build/firmware-ascii",
-            "name": "Debug ASCII Board",
-            "request": "launch",
-            "type": "cortex-debug",
-            "device": "ATSAM3U2C",
-            "runToEntryPoint": "main",
-            // "breakAfterReset": true,
-            "showDevDebugOutput": "none",
-            "servertype": "jlink",
-            "svdPath": "${workspaceFolder}/firmware_common/bsp/ATSAM3U2C.svd",
-            "preLaunchTask": "Build firmware"
-        },
-        {
-            "cwd": "${workspaceFolder}",
-            "executable": "./build/firmware-dot-matrix",
-            "name": "Debug Dot Matrix Board",
-            "request": "launch",
-            "type": "cortex-debug",
-            "device": "ATSAM3U2C",
-            "runToEntryPoint": "main",
-            // "breakAfterReset": true,
-            "showDevDebugOutput": "none",
-            "servertype": "jlink",
-            "svdPath": "${workspaceFolder}/firmware_common/bsp/ATSAM3U2C.svd",
-            "preLaunchTask": "Build firmware"
-        },
-        {
-            "name": "waf",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${workspaceFolder}/waf",
-            "args": [
-                "${input:waf-command}",
-            ],
-            // See https://github.com/microsoft/debugpy/issues/861
-            // -Xfrozen_modules=off doesn't seem to have an affect, possibly due to how waf unpacks?
-            "env": {
-                "PYDEVD_DISABLE_FILE_VALIDATION": "1"
-            },
-            "cwd": "${workspaceFolder}",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-        },
-    ],
-    "inputs": [
-        {
-            "id": "waf-command",
-            "type": "pickString",
-            "description": "Which waf subcommand to run",
-            "default": "build",
-            "options": [
-                "distclean",
-                "configure",
-                "clean",
-                "build",
-                "clean build",
-            ]
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ]
+    }
+  ],
+  "inputs": [
+    {
+      "id": "waf-command",
+      "type": "pickString",
+      "description": "Which waf subcommand to run",
+      "default": "build",
+      "options": [
+        "distclean",
+        "configure",
+        "clean",
+        "build",
+        "clean build"
+      ]
+    }
+  ]
 }
